--- a/Analysis/ROSMAP_TWAS/Whole Genome prior estimation.ipynb
+++ b/Analysis/ROSMAP_TWAS/Whole Genome prior estimation.ipynb
@@ -123,7 +123,8 @@
     "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\"  \\\n",
     "--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE  --job_size 1 \\\n",
     "--cv_times 100  \\\n",
-    "--mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds'  -J 6 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "--mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds' \\\n",
+    "-J 50 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &\n",
     "\n",
     "\n",
     "# UDR Prior\n",
