--- a/Workflow/wg_prior_genome.ipynb
+++ b/Workflow/wg_prior_genome.ipynb
@@ -97,12 +97,9 @@
    },
    "source": [
     "# Working example \n",
-    "A minimal working example (MWE) dataset that can be downloaded from the following link, which required a synapse account:\n",
-    "https://www.synapse.org/#!Synapse:syn24179065\n",
+    "A minimal working example (MWE) dataset that can be downloaded from the following link, which required access:https://drive.google.com/drive/u/0/folders/1N3PbH9hfv5eAikGHI58sXjVsssFkekWj\n",
     "\n",
-    "To test the command, please download and decompress the mwe folder, copy this file in it, and run the following command within the mwe folder.\n",
-    "\n",
-    "Alternativly, the options below can be changed based on respective relative paths.\n",
+    "To test the command, please download the mwe folder and run the first among the following command within the mwe/data folder.\n",
     "\n",
     "The time it take to run this MWE shall be around 5 minutes."
    ]
@@ -126,13 +123,29 @@
    "source": [
     "# Test the pipeline with MWE\n",
     "\n",
+    "\n",
     "nohup sos run /home/hs3163/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb mm_prior \\\n",
+    "--molecular_pheno_dir ./molc_dir/    \\\n",
+    "--rds_list ./rds_list_mwe  \\\n",
+    "--wd   ./ \\\n",
+    "--name \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--constraint \"Both\" \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif &\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Actual pipeline running.\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb mm_prior \\\n",
     "--molecular_pheno_dir /home/hs3163/Project/Genome_prior/data/molc_dir    \\\n",
     "--rds_list /home/hs3163/Project/Genome_prior/data/rds_list_test  \\\n",
     "--wd   /home/hs3163/Project/Genome_prior/test \\\n",
     "--name \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
-    "--constraint \"Both\" \\\n",
-    "--container /mnt/mfs/statgen/containers/twas_latest.sif -s build &\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "--constraint \"Both\" -s build &\n",
+    "\n",
     "\n",
     "\n",
     "## Actual pipeline running.\n",
@@ -272,9 +285,9 @@
     "    genos_join_sbhat = full_join(genos_join_sbhat,(genos%>%pull(sbhat))[[j]],by = \"rowname\")%>%select(-rowname)%>%as.matrix\n",
     "    }\n",
     "    }\n",
-    "    \n",
+    "    sumstats = list(bhat=genos_join_bhat, sbhat=genos_join_sbhat)\n",
     "    # save the rds file\n",
-    "    saveRDS(\"$[_output]\", list(bhat=genos_join_bhat, sbhat=genos_join_sbhat))\n",
+    "    saveRDS(file = \"$[_output]\", list(sumstats = sumstats))\n",
     "\n"
    ]
   },
