--- a/Analysis/ROSMAP_TWAS/Whole Genome TWAS(Fusion + MV_susie).ipynb
+++ b/Analysis/ROSMAP_TWAS/Whole Genome TWAS(Fusion + MV_susie).ipynb
@@ -128,6 +128,10 @@
     "\n",
     "/home/hs3163/Project/\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie_cv --molecular_pheno_dir \"/home/hs3163/Project/Alz_WG/mv_wg/molecular_phenotype_list\" --region_list \"/home/hs3163/Project/Alz_WG/mv_wg/wg_rds_list\" --wd \"\" --name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" --container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE --job_size 1 --cv_times 100 --mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds' -J 100 -q csg -c ~/GIT/neuro-twas/template/csg.yml csg.yml -s build &\n",
     "\n"
    ]
   },
@@ -168,7 +172,7 @@
     "sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb fusion_tf_cv --molecular_pheno_dir mole_pheno_ls   --region_list cand_rgs.txt  --wd ./   --name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" --container gaow/twas --impute TRUE --cv_times 2  &\n",
     "\n",
     "\n",
-    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie_cv --molecular_pheno_dir \"/mnt/mfs/statgen/neuro-twas/mv_wg/molecular_phenotype_list\" --region_list \"/mnt/mfs/statgen/neuro-twas/mv_wg/wg_rds_list\" --wd \"/mnt/mfs/statgen/neuro-twas/mv_wg/\" --name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" --container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE --job_size 1 --cv_times 100 --mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds' -J 200 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &\n",
     "\n",
     "\n"
    ]
@@ -179,8 +183,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie_cv \\\n",
+    "--molecular_pheno_dir \"/mnt/mfs/statgen/neuro-twas/mv_wg/molecular_phenotype_list\" \\\n",
+    "--region_list \"/mnt/mfs/statgen/neuro-twas/mv_wg/wg_rds_list\" \\\n",
+    "--wd \"/mnt/mfs/statgen/neuro-twas/mv_wg/\" \\\n",
+    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "--impute TRUE \\\n",
+    "--job_size 1 \\\n",
+    "--cv_times 100 \\\n",
+    "--mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds' \\\n",
+    "-J 200 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &\n",
     "\n",
-    "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie_cv --molecular_pheno_dir \"/home/hs3163/Project/Alz_WG/mv_wg/molecular_phenotype_list\" --region_list \"/home/hs3163/Project/Alz_WG/mv_wg/wg_rds_list\" --wd \"/home/hs3163/Project/Alz_WG/mv_wg\" --name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" --container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE --job_size 1 --cv_times 100 --mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds' -J 200 -q csg -c ./csg.yml -s build &"
+    "\n",
+    "\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie_cv \\\n",
+    "--molecular_pheno_dir \"/mnt/mfs/statgen/neuro-twas/mv_wg/molecular_phenotype_list\" \\\n",
+    "--region_list \"/mnt/mfs/statgen/neuro-twas/mv_wg/rds_bf\" \\\n",
+    "--wd \"/mnt/mfs/statgen/neuro-twas/mv_wg/\" \\\n",
+    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "--impute TRUE \\\n",
+    "--job_size 1 \\\n",
+    "--cv_times 100 \\\n",
+    "--mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds' \\\n",
+    "-J 200 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &"
    ]
   },
   {
