--- a/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
@@ -2392,7 +2392,7 @@
     "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
     "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
     "  --wd /home/hs3163/Project/Alz_WG/mv_wg/AC \\\n",
-    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list_1.txt \\\n",
     "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
     "  --region_name 1 \\\n",
     "  --data_start 2 \\\n",
@@ -2424,6 +2424,30 @@
      ]
     }
    ],
+   "source": [
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept_chr7.txt \\\n",
+    "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/PCC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
+    "  --wd /home/hs3163/Project/Alz/diag/ \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list  /home/hs3163/Project/Alz/data/RSM_Alz_region_list_PCC.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --weights_path /home/hs3163/Project/Alz/diag/WEIGHTS \\\n",
+    "  --weights_list /home/hs3163/Project/Alz/diag/WEIGHTS/wgt_ls \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"20G\" \\\n",
+    "  -s build &\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
