--- a/Analysis/ROSMAP_TWAS/Whole Genome TWAS(Fusion + MV_susie).ipynb
+++ b/Analysis/ROSMAP_TWAS/Whole Genome TWAS(Fusion + MV_susie).ipynb
@@ -2,21 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "# Whole Genome TWAS w/f fusion and susie"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "## Steps"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "### WG Fusion Wgt computation"
    ]
@@ -24,7 +30,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb twas_fusion  \\\n",
@@ -75,7 +83,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "### prior with postive constraint\n",
     "The codes used to produce the postive constraint: See the corresponding sections in Whole Genome prior estimation.ipynb\n"
@@ -84,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "nohup sos run ~/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb flash \\\n",
@@ -110,7 +122,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     "### MV_susie with postive constraint prior for whole genome with teem\n",
@@ -134,13 +148,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test \\\n",
+    "--gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt  \\\n",
+    "--molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
+    "--wd /home/hs3163/Project/Alz/multi_mp/wgt/DLPFC/ \\\n",
+    "--genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "--region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
+    "--region_name 1   --data_start 2   --window 500000 \\\n",
+    "--weights_path /home/hs3163/Project/Alz/multi_mp/wgt//DLPFC  \\\n",
+    "--weights_list /home/hs3163/Project/Alz/multi_mp/wgt//DLPFC/All_wgt_list.txt \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif   --job_size 1  --asso_mem \"50G\"   -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml   -s build &\n",
+    "\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test \\\n",
+    "--gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt  \\\n",
+    "--molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
+    "--wd /home/hs3163/Project/Alz/multi_mp/wgt/AC/ \\\n",
+    "--genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "--region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
+    "--region_name 1   --data_start 2   --window 500000 \\\n",
+    "--weights_path /home/hs3163/Project/Alz/multi_mp/wgt/AC  \\\n",
+    "--weights_list /home/hs3163/Project/Alz/multi_mp/wgt/AC/All_wgt_list.txt \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif   --job_size 1  --asso_mem \"50G\"   -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml   -s build &\n",
+    "\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test \\\n",
+    "--gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt  \\\n",
+    "--molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
+    "--wd /home/hs3163/Project/Alz/multi_mp/wgt/PCC/ \\\n",
+    "--genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "--region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
+    "--region_name 1   --data_start 2   --window 500000 \\\n",
+    "--weights_path /home/hs3163/Project/Alz/multi_mp/wgt/PCC  \\\n",
+    "--weights_list /home/hs3163/Project/Alz/multi_mp/wgt/PCC/All_wgt_list.txt \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif   --job_size 1  --asso_mem \"50G\"   -J 40 -q neurology -c /home/hs3163/GIT/neuro-twas/template/csg.yml   -s build &\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "source": [
     "### MV_susie with postive constraint"
    ]
@@ -148,7 +205,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "kernel": "SoS"
+   },
    "outputs": [],
    "source": [
     " nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie_cv --molecular_pheno_dir \"/home/hs3163/Project/Alz_WG/mv_wg/molecular_phenotype_list\" --region_list \"/home/hs3163/Project/Alz_WG/mv_wg/wg_rds_list\" --wd \"/home/hs3163/Project/Alz_WG/mv_wg\" --name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" --container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE --job_size 1 --cv_times 100 --mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds' -J 200 -q csg -c ./csg.yml -s build &"
@@ -168,6 +227,17 @@
    "name": "sos",
    "nbconvert_exporter": "sos_notebook.converter.SoS_Exporter",
    "pygments_lexer": "sos"
+  },
+  "sos": {
+   "kernels": [
+    [
+     "SoS",
+     "sos",
+     "",
+     ""
+    ]
+   ],
+   "version": "0.22.3"
   }
  },
  "nbformat": 4,
