--- a/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
+++ b/Analysis/ROSMAP_TWAS/Alz_specific_gene_analysis.ipynb
@@ -2357,15 +2357,16 @@
     "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
     "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
     "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
-    "  --wd /home/hs3163/Project/Alz_WG/mv_wg/wgt/DLPFC \\\n",
+    "  --wd /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/DLPFC \\\n",
     "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
     "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
     "  --region_name 1 \\\n",
     "  --data_start 2 \\\n",
     "  --window 500000 \\\n",
-    "  --weights_path /home/hs3163/Project/Alz_WG/mv_wg/wgt/DLPFC \\\n",
-    "  --weights_list /home/hs3163/Project/Alz_WG/mv_wg/wgt/DLPFC/All_wgt_list.txt \\\n",
+    "  --weights_path /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/DLPFC \\\n",
+    "  --weights_list /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/DLPFC/All_wgt_list.txt \\\n",
     "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
     "  --job_size 1\\\n",
     "  --asso_mem \"50G\" \\\n",
     "  -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
@@ -2374,15 +2375,16 @@
     "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
     "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
     "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
-    "  --wd /home/hs3163/Project/Alz_WG/mv_wg/wgt/PCC \\\n",
+    "  --wd /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/PCC \\\n",
     "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
     "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
     "  --region_name 1 \\\n",
     "  --data_start 2 \\\n",
     "  --window 500000 \\\n",
-    "  --weights_path /home/hs3163/Project/Alz_WG/mv_wg/wgt/PCC \\\n",
-    "  --weights_list /home/hs3163/Project/Alz_WG/mv_wg/wgt/PCC/All_wgt_list.txt \\\n",
+    "  --weights_path /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/PCC \\\n",
+    "  --weights_list /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/PCC/All_wgt_list.txt \\\n",
     "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
     "  --job_size 1\\\n",
     "  --asso_mem \"50G\" \\\n",
     "  -J 40 -q neurology -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
@@ -2391,15 +2393,16 @@
     "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
     "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
     "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
-    "  --wd /home/hs3163/Project/Alz_WG/mv_wg/AC \\\n",
-    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list_1.txt \\\n",
+    "  --wd /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/AC \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
     "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
     "  --region_name 1 \\\n",
     "  --data_start 2 \\\n",
     "  --window 500000 \\\n",
-    "  --weights_path /home/hs3163/Project/Alz_WG/mv_wg/AC \\\n",
-    "  --weights_list /home/hs3163/Project/Alz_WG/mv_wg/AC/All_wgt_list.txt \\\n",
+    "  --weights_path /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/AC \\\n",
+    "  --weights_list /mnt/mfs/statgen/neuro-twas/mv_wg/wgt/AC/All_wgt_list.txt \\\n",
     "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
     "  --job_size 1\\\n",
     "  --asso_mem \"50G\" \\\n",
     "  -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
@@ -2448,7 +2451,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
+    "  --wd /mnt/mfs/statgen/neuro-twas/muti_mp_3/wgt/DLPFC \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --weights_path /mnt/mfs/statgen/neuro-twas/muti_mp_3/wgt/DLPFC \\\n",
+    "  --weights_list /mnt/mfs/statgen/neuro-twas/muti_mp_3/wgt/DLPFC/All_wgt_list.txt \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"50G\" \\\n",
+    "  -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
+    "  -s build &\n",
+    "\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/AC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
+    "  --wd /mnt/mfs/statgen/neuro-twas/muti_mp_3/wgt/AC \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --weights_path /mnt/mfs/statgen/neuro-twas/muti_mp_3/wgt/AC \\\n",
+    "  --weights_list /mnt/mfs/statgen/neuro-twas/muti_mp_3/wgt/AC/All_wgt_list.txt \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"50G\" \\\n",
+    "  -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
+    "  -s build &\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test  \\\n",
+    "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
+    "  --molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/PCC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
+    "  --wd /mnt/mfs/statgen/neuro-twas/muti_mp_3/wgt/PCC \\\n",
+    "  --genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
+    "  --region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 2 \\\n",
+    "  --window 500000 \\\n",
+    "  --weights_path /mnt/mfs/statgen/neuro-twas/muti_mp_3/wgt/PCC \\\n",
+    "  --weights_list /mnt/mfs/statgen/neuro-twas/muti_mp_3/wgt/PCC/All_wgt_list.txt \\\n",
+    "  --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "  --job_size 1\\\n",
+    "  --job_size 1\\\n",
+    "  --asso_mem \"50G\" \\\n",
+    "  -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml \\\n",
+    "  -s build &\n"
+   ]
   }
  ],
  "metadata": {
