Complete MV_Susie TWAS Pipeline

--- a/Analysis/ROSMAP_TWAS/Whole Genome TWAS(Fusion + MV_susie).ipynb
+++ b/Analysis/ROSMAP_TWAS/Whole Genome TWAS(Fusion + MV_susie).ipynb
@@ -2,27 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "kernel": "SoS"
-   },
+   "metadata": {},
    "source": [
     "# Whole Genome TWAS w/f fusion and susie"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "kernel": "SoS"
-   },
+   "metadata": {},
    "source": [
     "## Steps"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "kernel": "SoS"
-   },
+   "metadata": {},
    "source": [
     "### WG Fusion Wgt computation"
    ]
@@ -30,9 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "kernel": "SoS"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb twas_fusion  \\\n",
@@ -50,7 +42,7 @@
     "  --asso_mem \"6G\" \\\n",
     "  -J 40 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
     "   \n",
-    "  nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb twas_fusion  \\\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb twas_fusion  \\\n",
     "  --gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt \\\n",
     "  --molecular-pheno  /home/hs3163/Project/Rosmap/data/gene_exp/PCC/geneTpmResidualsAgeGenderAdj_rename.txt  \\\n",
     "  --wd /home/hs3163/Project/Genome_prior/PCC \\\n",
@@ -78,14 +70,12 @@
     "  --model bslmm blup lasso top1 enet \\\n",
     "  --job_size 1\\\n",
     "  --asso_mem \"6G\" \\\n",
-    "  -J 40 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &"
+    "  -J 200 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml -s build &"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "kernel": "SoS"
-   },
+   "metadata": {},
    "source": [
     "### prior with postive constraint\n",
     "The codes used to produce the postive constraint: See the corresponding sections in Whole Genome prior estimation.ipynb\n"
@@ -94,9 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "kernel": "SoS"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nohup sos run ~/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb flash \\\n",
@@ -122,9 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "kernel": "SoS"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### MV_susie with postive constraint prior for whole genome with teem\n",
@@ -137,66 +123,15 @@
     "--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE  --job_size 1 \\\n",
     "--cv_times 100  \\\n",
     "--mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds'\\\n",
-    "-J 200 -q csg -c /home/hs3163/Project/mwe/mv_susie_mwe/csg.yml -s build &\n",
+    "-J 6 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
     "\n",
     "\n",
-    "/home/hs3163/Project/mwe/mv_susie_mwe/csg.yml\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "kernel": "SoS"
-   },
-   "outputs": [],
-   "source": [
-    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test \\\n",
-    "--gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt  \\\n",
-    "--molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
-    "--wd /home/hs3163/Project/Alz/multi_mp/wgt/DLPFC/ \\\n",
-    "--genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
-    "--region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
-    "--region_name 1   --data_start 2   --window 500000 \\\n",
-    "--weights_path /home/hs3163/Project/Alz/multi_mp/wgt//DLPFC  \\\n",
-    "--weights_list /home/hs3163/Project/Alz/multi_mp/wgt//DLPFC/All_wgt_list.txt \\\n",
-    "--container /mnt/mfs/statgen/containers/twas_latest.sif   --job_size 1  --asso_mem \"50G\"   -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml   -s build &\n",
-    "\n",
-    "\n",
-<<<<<<< HEAD
-    "\n",
-    "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie --molecular_pheno_dir \"/mnt/mfs/statgen/neuro-twas/mv_wg/molecular_phenotype_list\" --region_list \"/mnt/mfs/statgen/neuro-twas/mv_wg/wg_rds_list\" --wd \"/mnt/mfs/statgen/neuro-twas/mv_wg/\" --name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" --container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE --job_size 1 --cv_times 100 --mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds' -J 200 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &\n",
-    "\n",
-    "\n",
-=======
-    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test \\\n",
-    "--gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt  \\\n",
-    "--molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
-    "--wd /home/hs3163/Project/Alz/multi_mp/wgt/AC/ \\\n",
-    "--genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
-    "--region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
-    "--region_name 1   --data_start 2   --window 500000 \\\n",
-    "--weights_path /home/hs3163/Project/Alz/multi_mp/wgt/AC  \\\n",
-    "--weights_list /home/hs3163/Project/Alz/multi_mp/wgt/AC/All_wgt_list.txt \\\n",
-    "--container /mnt/mfs/statgen/containers/twas_latest.sif   --job_size 1  --asso_mem \"50G\"   -J 40 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml   -s build &\n",
->>>>>>> 9689a072ff1c37d1660d5760b49796c3836807e2
-    "\n",
-    "\n",
-    "nohup sos run ~/GIT/neuro-twas/Workflow/twas_fusion_susie.ipynb association_test \\\n",
-    "--gwas_sumstat /home/hs3163/Project/Alz/data/AD_sumstats_Jansenetal_2019sept.txt  \\\n",
-    "--molecular-pheno /home/hs3163/Project/Rosmap/data/gene_exp/DLPFC/geneTpmResidualsAgeGenderAdj_rename.txt \\\n",
-    "--wd /home/hs3163/Project/Alz/multi_mp/wgt/PCC/ \\\n",
-    "--genotype_list /home/hs3163/Project/Rosmap/data/Rosmap_wgs_genotype_list.txt \\\n",
-    "--region_list /home/hs3163/Project/mwe/mv_susie_mwe/region_list \\\n",
-    "--region_name 1   --data_start 2   --window 500000 \\\n",
-    "--weights_path /home/hs3163/Project/Alz/multi_mp/wgt/PCC  \\\n",
-    "--weights_list /home/hs3163/Project/Alz/multi_mp/wgt/PCC/All_wgt_list.txt \\\n",
-    "--container /mnt/mfs/statgen/containers/twas_latest.sif   --job_size 1  --asso_mem \"50G\"   -J 40 -q neurology -c /home/hs3163/GIT/neuro-twas/template/csg.yml   -s build &\n",
+    "/home/hs3163/Project/\n",
     "\n",
     "\n",
     "\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie_cv --molecular_pheno_dir \"/home/hs3163/Project/Alz_WG/mv_wg/molecular_phenotype_list\" --region_list \"/home/hs3163/Project/Alz_WG/mv_wg/wg_rds_list\" --wd \"\" --name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" --container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE --job_size 1 --cv_times 100 --mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds' -J 100 -q csg -c ~/GIT/neuro-twas/template/csg.yml csg.yml -s build &\n",
     "\n"
    ]
   },
@@ -208,12 +143,97 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {
-    "kernel": "SoS"
-   },
+   "metadata": {},
    "source": [
     "### MV_susie with postive constraint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb fusion_tf_cv --molecular_pheno_dir mole_pheno_ls   --region_list cand_rgs.txt  --wd ./   --name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" --container gaow/twas --impute TRUE --cv_times 2  &\n",
+    "\n",
+    "\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie \\\n",
+    "--molecular_pheno_dir \"/mnt/mfs/statgen/neuro-twas/mv_wg/molecular_phenotype_list\" \\\n",
+    "--region_list \"/mnt/mfs/statgen/neuro-twas/mv_wg/wg_rds_list\" \\\n",
+    "--wd \"/mnt/mfs/statgen/neuro-twas/mv_wg/\" \\\n",
+    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "--impute TRUE --job_size 1 --cv_times 100 \\\n",
+    "--mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds' \\\n",
+    "-J 200 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie_cv \\\n",
+    "--molecular_pheno_dir \"/mnt/mfs/statgen/neuro-twas/mv_wg/molecular_phenotype_list\" \\\n",
+    "--region_list \"/mnt/mfs/statgen/neuro-twas/mv_wg/wg_rds_list\" \\\n",
+    "--wd \"/mnt/mfs/statgen/neuro-twas/mv_wg/\" \\\n",
+    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "--impute TRUE \\\n",
+    "--job_size 1 \\\n",
+    "--cv_times 100 \\\n",
+    "--mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds' \\\n",
+    "-J 200 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie_cv \\\n",
+    "--molecular_pheno_dir \"/mnt/mfs/statgen/neuro-twas/mv_wg/molecular_phenotype_list\" \\\n",
+    "--region_list \"/mnt/mfs/statgen/neuro-twas/mv_wg/rds_bf\" \\\n",
+    "--wd \"/mnt/mfs/statgen/neuro-twas/mv_wg/\" \\\n",
+    "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "--impute TRUE \\\n",
+    "--job_size 1 \\\n",
+    "--cv_times 100 \\\n",
+    "--mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds' \\\n",
+    "-J 200 -q csg -c ~/GIT/neuro-twas/template/csg.yml -s build &"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TWAS for MV susie"
    ]
   },
   {
@@ -226,12 +246,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "kernel": "SoS"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-<<<<<<< HEAD
     "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb fusion_tf \\\n",
     "--molecular_pheno_dir mole_pheno_ls   --region_list wg_rds_list_final  --wd ./ \\\n",
     "--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
@@ -1265,9 +1282,6 @@
     " pval_PCC = map_dbl(model,~.x$pval[2]%>%p.adjust( method = \"fdr\")),\n",
     " pval_DLPFC = map_dbl(model,~.x$pval[3]%>%p.adjust( method = \"fdr\"))\n",
     ")"
-=======
-    " nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie_cv --molecular_pheno_dir \"/home/hs3163/Project/Alz_WG/mv_wg/molecular_phenotype_list\" --region_list \"/home/hs3163/Project/Alz_WG/mv_wg/wg_rds_list\" --wd \"/home/hs3163/Project/Alz_WG/mv_wg\" --name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" --container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE --job_size 1 --cv_times 100 --mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds' -J 200 -q csg -c ./csg.yml -s build &"
->>>>>>> 9689a072ff1c37d1660d5760b49796c3836807e2
    ]
   },
   {
@@ -3837,32 +3851,12 @@
    "name": "ir"
   },
   "language_info": {
-<<<<<<< HEAD
    "codemirror_mode": "r",
    "file_extension": ".r",
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
    "version": "3.6.3"
-=======
-   "codemirror_mode": "sos",
-   "file_extension": ".sos",
-   "mimetype": "text/x-sos",
-   "name": "sos",
-   "nbconvert_exporter": "sos_notebook.converter.SoS_Exporter",
-   "pygments_lexer": "sos"
-  },
-  "sos": {
-   "kernels": [
-    [
-     "SoS",
-     "sos",
-     "",
-     ""
-    ]
-   ],
-   "version": "0.22.3"
->>>>>>> 9689a072ff1c37d1660d5760b49796c3836807e2
   }
  },
  "nbformat": 4,
