--- a/Analysis/Whole_Genome_TWAS.ipynb
+++ b/Analysis/Whole_Genome_TWAS.ipynb
@@ -3861,12 +3861,12 @@
    "name": "ir"
   },
   "language_info": {
-   "codemirror_mode": "sos",
-   "file_extension": ".sos",
-   "mimetype": "text/x-sos",
-   "name": "sos",
-   "nbconvert_exporter": "sos_notebook.converter.SoS_Exporter",
-   "pygments_lexer": "sos"
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "3.6.3"
   },
   "sos": {
    "kernels": [
